Banner area complete

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
             </ul>
         </nav>
         <section class="banner">
-            
+            <div class="banner_content">
+                <h4>Hi, I  am</h4>
+                <h2>Aminur Rahman</h2>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="primary_btn">Download CV</button>
+                <button class="primary_btn">Contact</button>
+            </div>
+            <div class="banner_image">
+                <img src="images/hardy.png" alt="Image">
+            </div>
         </section>
     </header>
     <main>
