about area complete

--- a/index.html
+++ b/index.html
@@ -33,7 +33,30 @@
         </section>
     </header>
     <main>
-
+        <section class="about">
+            <div class="about_content">
+                <h2 class="section_title"> About</h2>
+                <p class="section_description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                <div class="about_info">
+                    <div class="info_details">
+                        <h5>Name:</h5>
+                        <p>Mary Hardy</p>
+                    </div>
+                    <div class="info_details">
+                        <h5>Email: </h5>
+                        <p>  info@gmail.com</p>
+                    </div>
+                    <div class="info_details">
+                        <h5>Date of birth: </h5>
+                        <p>11 November 1987</p>
+                    </div>
+                    <div class="info_details">
+                        <h5>From: </h5>
+                        <p> Los Angeles, USA</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
