--- a/index.html
+++ b/index.html
@@ -57,6 +57,34 @@
                 </div>
             </div>
         </section>
+        <section class="wid_container">
+            <div class="wid">
+                <h2 class="section_title">What I do</h2>
+                <p class="section_description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                <div class="skills">
+                    <div class="item">
+                        <img src="images/icons/js.png" alt="">
+                        <h4>Vanilla JavaScript</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="item">
+                        <img src="images/icons/react.png" alt="">
+                        <h4>React</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="item">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <h4>Node.js</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="item">
+                        <img src="images/icons/mongo.png" alt="">
+                        <h4>MongoDB</h4>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
