Resume are proccesing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="primary_btn">Contact</button>
             </div>
             <div class="banner_image">
-                <img src="images/hardy.png" alt="Image">
+                <img src="images/Layer-1.png" alt="Image">
             </div>
         </section>
     </header>
@@ -81,6 +81,65 @@
                         <img src="images/icons/mongo.png" alt="">
                         <h4>MongoDB</h4>
                         <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="resume_container">
+            <div class="resume">
+                <h2 class="section_title">A summary of My Resume</h2>
+                <div class="resume_content">
+                    <div class="resume_column">
+                        <h3 class="resume_column_title">My Education</h3>
+                        <div class="resume_ex">
+                            <h4>Master in Computer Engineering</h4>
+                            <h5>Harvard University / 2015 - 2017</h5>
+                            <p>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                            </p>
+                            <hr>
+                        </div>
+                        <div class="resume_ex">
+                            <h4>Master in Computer Engineering</h4>
+                            <h5>Harvard University / 2015 - 2017</h5>
+                            <p>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                            </p>
+                            <hr>
+                        </div>
+                        <div class="resume_ex">
+                            <h4>Master in Computer Engineering</h4>
+                            <h5>Harvard University / 2015 - 2017</h5>
+                            <p>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="resume_column">
+                        <h3 class="resume_column_title">My Experience</h3>
+                        <div class="resume_ex">
+                            <h4>Sr. Font End Developer</h4>
+                            <h5>Apple Inc / 2020 - Current</h5>
+                            <p>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                            </p>
+                            <hr>
+                        </div>
+                        <div class="resume_ex">
+                            <h4>Jr. Font End Developer</h4>
+                            <h5>Dribbble Inc / 2018 - 2022</h5>
+                            <p>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                            </p>
+                            <hr>
+                        </div>
+                        <div class="resume_ex">
+                            <h4>HTML Developer</h4>
+                            <h5>Adobe Inc / 2017 - 2018</h5>
+                            <p>List skill/technologies here. You can change the icon above 
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
