--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e45d5c607f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -24,8 +25,8 @@
                 <h4>Hi, I  am</h4>
                 <h2>Aminur Rahman</h2>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="primary_btn">Download CV</button>
-                <button class="primary_btn">Contact</button>
+                <button class="primary_btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="scnd_btn"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div class="banner_image">
                 <img src="images/Layer-1.png" alt="Image">
@@ -40,7 +41,7 @@
                 <div class="about_info">
                     <div class="info_details">
                         <h5>Name:</h5>
-                        <p>Mary Hardy</p>
+                        <p>Aminur Rahman</p>
                     </div>
                     <div class="info_details">
                         <h5>Email: </h5>
@@ -61,27 +62,27 @@
             <div class="wid">
                 <h2 class="section_title">What I do</h2>
                 <p class="section_description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-                <div class="skills">
-                    <div class="item">
-                        <img src="images/icons/js.png" alt="">
-                        <h4>Vanilla JavaScript</h4>
-                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
-                    <div class="item">
-                        <img src="images/icons/react.png" alt="">
-                        <h4>React</h4>
-                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
-                    <div class="item">
-                        <img src="images/icons/nodejs.png" alt="">
-                        <h4>Node.js</h4>
-                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
-                    <div class="item">
-                        <img src="images/icons/mongo.png" alt="">
-                        <h4>MongoDB</h4>
-                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                    </div>
+            </div>
+            <div class="skills">
+                <div class="item">
+                    <img src="images/icons/js.png" alt="">
+                    <h4>Vanilla JavaScript</h4>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="item">
+                    <img src="images/icons/react.png" alt="">
+                    <h4>React</h4>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="item">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4>Node.js</h4>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="item">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4>MongoDB</h4>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
@@ -142,10 +143,32 @@
                         </div>
                     </div>
                 </div>
+                <br><br>
+                <button class="primary_btn"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
     <footer>
+        <div class="footer">
+            <div class="social_area">
+                <h2 class="footer_heading">Lets Connect</h2>
+                <p class="footer_description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <ul>
+                    <li><a href=""><img src="images/icons/facebook.png" alt=""></a></li>
+                    <li><a href=""><img src="images/icons/insta.png" alt=""></a></li>
+                    <li><a href=""><img src="images/icons/twitter.png" alt=""></a></li>
+                </ul>
+            </div>
+            <div class="form_area">
+                <h2 class="footer_heading">Let’s Message me</h2>
+                <form action="">
+                    <input class="form_field" type="text" name="name" id="name" placeholder="Your Name">
+                    <input class="form_field" type="email" name="email" id="email" placeholder="Your Email">
+                    <textarea class="form_field" name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input type="button" value="submit" class="primary_btn">
+                </form>
+            </div>
+        </div>
         
     </footer>
 </body>
