--- a/index.html
+++ b/index.html
@@ -3,173 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web developer portfolio</title>
+    <title>Flower Shop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e45d5c607f.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <h2>Ami<span>n</span>ur</h2>
-            <ul>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Blog</a></li>
-                <li><button class="primary_btn">Hire me</button></li>
-            </ul>
-        </nav>
         <section class="banner">
             <div class="banner_content">
-                <h4>Hi, I  am</h4>
-                <h2>Aminur Rahman</h2>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="primary_btn"><i class="fa-solid fa-download"></i> Download CV</button>
-                <button class="scnd_btn"><i class="fa-solid fa-phone"></i> Contact</button>
+                <h1>Let's make beautiful flowers a part of your life.</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="primary_btn">Shop Now</button>
             </div>
-            <div class="banner_image">
-                <img src="images/Layer-1.png" alt="Image">
-            </div>
+            <img src="images/banner.png" alt="Flower">
         </section>
     </header>
     <main>
-        <section class="about">
-            <div class="about_content">
-                <h2 class="section_title"> About</h2>
-                <p class="section_description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-                <div class="about_info">
-                    <div class="info_details">
-                        <h5>Name:</h5>
-                        <p>Aminur Rahman</p>
+        <section class="featured">
+            <h2 class="section_title">Our Featured Flowers</h2>
+            <p class="section_desc">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <div class="featured_items">
+                <div class="item">
+                    <div class="img_1 featured_img">
+                        <img src="images/featured_1.png" alt="">
                     </div>
-                    <div class="info_details">
-                        <h5>Email: </h5>
-                        <p>  info@gmail.com</p>
+                    <p><a href="#">Pink Flower Tree</a></p>
+                </div>
+                <div class="item">
+                    <div class="img_2 featured_img">
+                        <img src="images/featured_2.png" alt="">
                     </div>
-                    <div class="info_details">
-                        <h5>Date of birth: </h5>
-                        <p>11 November 1987</p>
+                    <p><a href="#">Pink Flower Tree</a></p>
+                </div>
+                <div class="item">
+                    <div class="img_3 featured_img">
+                        <img src="images/featured_3.png" alt="">
                     </div>
-                    <div class="info_details">
-                        <h5>From: </h5>
-                        <p> Los Angeles, USA</p>
-                    </div>
+                    <p><a href="#">Yellow Flower Tree</a></p>
                 </div>
             </div>
         </section>
-        <section class="wid_container">
-            <div class="wid">
-                <h2 class="section_title">What I do</h2>
-                <p class="section_description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-            </div>
-            <div class="skills">
+        <section class="support">
+            <div class="support_items">
                 <div class="item">
-                    <img src="images/icons/js.png" alt="">
-                    <h4>Vanilla JavaScript</h4>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <img src="images/delivery-man.svg" alt="">
+                    <p>Same Day Delivery. Click & Collect.</p>
                 </div>
                 <div class="item">
-                    <img src="images/icons/react.png" alt="">
-                    <h4>React</h4>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <img src="images/flower.svg" alt="">
+                    <p>Fresh Flowers. Local Growers.</p>
                 </div>
                 <div class="item">
-                    <img src="images/icons/nodejs.png" alt="">
-                    <h4>Node.js</h4>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
-                </div>
-                <div class="item">
-                    <img src="images/icons/mongo.png" alt="">
-                    <h4>MongoDB</h4>
-                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <img src="images/customer-service.svg" alt="">
+                    <p>24/7 Free Support.</p>
                 </div>
             </div>
         </section>
-        <section class="resume_container">
-            <div class="resume">
-                <h2 class="section_title">A summary of My Resume</h2>
-                <div class="resume_content">
-                    <div class="resume_column">
-                        <h3 class="resume_column_title">My Education</h3>
-                        <div class="resume_ex">
-                            <h4>Master in Computer Engineering</h4>
-                            <h5>Harvard University / 2015 - 2017</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            </p>
-                            <hr>
-                        </div>
-                        <div class="resume_ex">
-                            <h4>Master in Computer Engineering</h4>
-                            <h5>Harvard University / 2015 - 2017</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            </p>
-                            <hr>
-                        </div>
-                        <div class="resume_ex">
-                            <h4>Master in Computer Engineering</h4>
-                            <h5>Harvard University / 2015 - 2017</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="resume_column">
-                        <h3 class="resume_column_title">My Experience</h3>
-                        <div class="resume_ex">
-                            <h4>Sr. Font End Developer</h4>
-                            <h5>Apple Inc / 2020 - Current</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            </p>
-                            <hr>
-                        </div>
-                        <div class="resume_ex">
-                            <h4>Jr. Font End Developer</h4>
-                            <h5>Dribbble Inc / 2018 - 2022</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            </p>
-                            <hr>
-                        </div>
-                        <div class="resume_ex">
-                            <h4>HTML Developer</h4>
-                            <h5>Adobe Inc / 2017 - 2018</h5>
-                            <p>List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <br><br>
-                <button class="primary_btn"><i class="fa-solid fa-download"></i> Download CV</button>
+        <section class="discount">
+            <div class="dis_cont">
+                <h2>Hot Deal ! Sale Up To 25%<span> Off </span></h2>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+                <button class="primary_btn">Sign Up</button>
             </div>
+            <img src="images/discount.png" alt="">
+        </section>
+        <section class="best_sells">
+            <h2 class="section_title">Our Best Selling</h2>
+            <p class="section_desc">It is a long established fact that a reader will be distracted by the readable <br>
+                content of a page when looking at its layout.</p>
+            <div class="bs_items">
+                <div class="item">
+                    <img src="images/bs_3.jpg" alt="">
+                    <p><a href="#">Nature's Embrace</a></p>
+                </div>
+                <div class="item">
+                    <img src="images/bs_1.jpg" alt="">
+                    <p><a href="#">Eternal Bloom</a></p>
+                </div>
+                <div class="item">
+                    <img src="images/bs_2.jpg" alt="">
+                    <p><a href="#">Harmony of Flowers</a></p>
+                </div>
+                <div class="item">
+                    <img src="images/bs_4.jpg" alt="">
+                    <p><a href="#">Enchanting Meadows</a></p>
+                </div>
+            </div>
+        </section>
+        <section class="insta">
+            <h2 class="section_title">Instagram</h2>
+            <p class="section_desc">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <div class="insta_imgs">
+                <img src="images/insta_1.jpg" alt="">
+                <img src="images/insta_2.png" alt="">
+                <img src="images/insta_3.png" alt="">
+                <img src="images/insta_4.png" alt="">
+            </div>
+        </section>
+        <section class="subscribe">
+            <h2>Get The Latest Deals</h2>
+            <p>$30 coupon for first shopping</p>
+            <form action="">
+                <input type="email" name="email" id="email" placeholder="Enter your email here....">
+                <input type="button" value="Subscribe" class="primary_btn">
+            </form>
         </section>
     </main>
     <footer>
-        <div class="footer">
-            <div class="social_area">
-                <h2 class="footer_heading">Lets Connect</h2>
-                <p class="footer_description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-                <ul>
-                    <li><a href=""><img src="images/icons/facebook.png" alt=""></a></li>
-                    <li><a href=""><img src="images/icons/insta.png" alt=""></a></li>
-                    <li><a href=""><img src="images/icons/twitter.png" alt=""></a></li>
-                </ul>
-            </div>
-            <div class="form_area">
-                <h2 class="footer_heading">Let’s Message me</h2>
-                <form action="">
-                    <input class="form_field" type="text" name="name" id="name" placeholder="Your Name">
-                    <input class="form_field" type="email" name="email" id="email" placeholder="Your Email">
-                    <textarea class="form_field" name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
-                    <input type="button" value="submit" class="primary_btn">
-                </form>
-            </div>
+        <div class="footer_area">
+            <h2>Flower<span>Shop</span></h2>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <p class="copyright">&#64;2020-2023, FlowerShop.com. All rights reserved.</p>
         </div>
-        
     </footer>
 </body>
 </html>
